Removed dummy text

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,8 +17,8 @@
 			<div class="col-md-9 mb-5">
 				<h2>What We Do</h2>
 				<hr>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt neque tempore recusandae animi soluta quasi? Asperiores rem dolore eaque vel, porro, soluta unde debitis aliquam laboriosam. Repellat explicabo, maiores!</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis optio neque consectetur consequatur magni in nisi, natus beatae quidem quam odit commodi ducimus totam eum, alias, adipisci nesciunt voluptate. Voluptatum.</p>
+				<p>Team Create is a community that promotes team collaboration by introducing new team members to projects in development.</p>
+				<p>Do you have an idea? Or maybe your need a little more support. Creating a team and recruiting team members helps your team reach its goals. If you're interested in working on a project with others you can join teams.</p>
 				<a class="btn btn-primary" href="{{ url_for('main.teams') }}">Look at Current Teams</a>
 			</div>
 			<div class="col-md-3 mb-5">
